Return default value of histrogram